WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39678
Compile fix for Android, #include <wtf/RefCounted.h>
https://bugs.webkit.org/show_bug.cgi?id=39678
Summary
Compile fix for Android, #include <wtf/RefCounted.h>
Kristian Monsen
Reported
2010-05-25 10:16:35 PDT
Need to add #include <wtf/RefCounted.h> to compile on Android. For some reason this does not get included through #include <wtf/Threading.h> here.
Attachments
Proposed patch
(1.00 KB, patch)
2010-05-25 10:30 PDT
,
Kristian Monsen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kristian Monsen
Comment 1
2010-05-25 10:30:30 PDT
Created
attachment 57025
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2010-05-27 03:51:26 PDT
Comment on
attachment 57025
[details]
Proposed patch Clearing flags on attachment: 57025 Committed
r60289
: <
http://trac.webkit.org/changeset/60289
>
WebKit Commit Bot
Comment 3
2010-05-27 03:51:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug