2010-05-27  Kristian Monsen  <kristianm@google.com>

Reviewed by Darin Adler.

        Compile fix for Android, added include for Refcounted.h, this did not get
        included through Threading.h in Android.
        https://bugs.webkit.org/show_bug.cgi?id=39678

        Build fix only, no new tests.

        * storage/SQLTransactionSyncCallback.h:

Canonical link: https://commits.webkit.org/51340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60289 268f45cc-cd09-0410-ab3c-d52691b4dbfc