WebCore/storage/SQLTransactionSyncCallback.h
@@ -31,6 +31,7 @@
 
 #if ENABLE(DATABASE)
 
+#include <wtf/RefCounted.h>
 #include <wtf/Threading.h>
 
 namespace WebCore {
